--- a/index.htm
+++ b/index.htm
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="it">
 
     <head>
         <title>Checco's Portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Workbench&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <h1>Welcome to Checco's Portfolio</h1>
+        <h1 style="text-align: center; font-family: 'Workbench', sans-serif;">Checco's Portfolio</h1>
 
         <hr>
 
         <h2>What is the purpose of this site?</h2>
         <p>Here you can find the story of my projects, showing how I have improved up to today.</p>
 
-        <h2>Why did you choose this minimalist style for your portfolio?</h2>
-        <p>I love minimalist and futuristic styles.</p>
+        <h2 style="text-align: left;">Why did you choose this minimalist style for your portfolio?</h2>
+        <p style="text-align: left;">I love minimalist and futuristic styles.</p>
     </body>
 
 </html>
