--- a/index.htm
+++ b/index.htm
@@ -4,21 +4,19 @@
 
     <head>
         <title>Checco's Portfolio</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Workbench&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1 style="text-align: center; font-family: 'Workbench', sans-serif;">Checco's Portfolio</h1>
+        <h1 class="workbench-font main-title">Checco's Portfolio</h1>
 
         <hr>
 
         <h2>What is the purpose of this site?</h2>
         <p>Here you can find the story of my projects, showing how I have improved up to today.</p>
 
-        <h2 style="text-align: left;">Why did you choose this minimalist style for your portfolio?</h2>
-        <p style="text-align: left;">I love minimalist and futuristic styles.</p>
+        <h2 class="txt-right">Why did you choose this minimalist style for your portfolio?</h2>
+        <p class="txt-right">I love minimalist and futuristic styles.</p>
     </body>
 
 </html>
