--- a/index.htm
+++ b/index.htm
@@ -5,18 +5,29 @@
     <head>
         <title>Checco's Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
+        <nav class="navbar">
         <h1 class="workbench-font main-title">Checco's Portfolio</h1>
-
-        <hr>
+        <ul>
+            <li class="litem">Social</li>
+            <li class="litem">Services</li>
+        </ul>
+        </nav>
+        
 
         <h2>What is the purpose of this site?</h2>
         <p>Here you can find the story of my projects, showing how I have improved up to today.</p>
 
-        <h2 class="txt-right">Why did you choose this minimalist style for your portfolio?</h2>
-        <p class="txt-right">I love minimalist and futuristic styles.</p>
+        <h2 class="txt-center">Why did you choose this minimalist style for your portfolio?</h2>
+        <p class="txt-center">I love minimalist and futuristic styles.</p>
+
+        <h2 class="txt-right">What is my first project?</h2>
+        <p class="txt-right">My portfolio is my very first personal project, built to showcase my skills.</p>
+
+        
     </body>
 
 </html>
