Add no-select class

--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <nav class="navbar">
+        <nav class="navbar no-select">
         <h1 class="workbench-font main-title">Checco's Portfolio</h1>
         <ul>
             <li class="litem">Social</li>
