Fix text margin

--- a/index.htm
+++ b/index.htm
@@ -18,14 +18,14 @@
         </nav>
         
 
-        <h2>What is the purpose of this site?</h2>
-        <p>Here you can find the story of my projects, showing how I have improved up to today.</p>
+        <h2 class="margin-auto">What is the purpose of this site?</h2>
+        <p class="margin-auto">Here you can find the story of my projects, showing how I have improved up to today.</p>
 
-        <h2 class="txt-center">Why did you choose this minimalist style for your portfolio?</h2>
-        <p class="txt-center">I love minimalist and futuristic styles.</p>
+        <h2 class="txt-center margin-auto">Why did you choose this minimalist style for your portfolio?</h2>
+        <p class="txt-center margin-auto">I love minimalist and futuristic styles.</p>
 
-        <h2 class="txt-right">What is my first project?</h2>
-        <p class="txt-right">My portfolio is my very first personal project, built to showcase my skills.</p>
+        <h2 class="txt-right margin-auto">What is my first project?</h2>
+        <p class="txt-right margin-auto">My portfolio is my very first personal project, built to showcase my skills.</p>
 
         
     </body>
