Fix margin and flex layout

--- a/index.htm
+++ b/index.htm
@@ -14,19 +14,21 @@
         <ul>
             <li class="litem">Social</li>
             <li class="litem">Services</li>
+            <li class="litem">Coworkers</li>
         </ul>
         </nav>
         
+        <div class="space-between">
+        <h2 class="margin-bottom-none">What is the purpose of this site?</h2>
+        <h2 class="margin-bottom-none">Why did you choose this minimalist style for your portfolio?</h2>
+        <h2 class="margin-bottom-none">What is my first project?</h2>  
+        </div>
 
-        <h2 class="margin-auto">What is the purpose of this site?</h2>
-        <p class="margin-auto">Here you can find the story of my projects, showing how I have improved up to today.</p>
-
-        <h2 class="txt-center margin-auto">Why did you choose this minimalist style for your portfolio?</h2>
-        <p class="txt-center margin-auto">I love minimalist and futuristic styles.</p>
-
-        <h2 class="txt-right margin-auto">What is my first project?</h2>
-        <p class="txt-right margin-auto">My portfolio is my very first personal project, built to showcase my skills.</p>
-
+        <div class="space-between">
+        <p>Here you can find the story of my projects, showing how I have improved up to today.</p>
+        <p>I love minimalist and futuristic styles.</p>
+        <p>My portfolio is my very first personal project, built to showcase my skills.</p>  
+        </div>
         
     </body>
 
