Change flex to grid

--- a/index.htm
+++ b/index.htm
@@ -9,27 +9,22 @@
     </head>
 
     <body>
-        <nav class="navbar no-select">
-        <h1 class="workbench-font main-title">Checco's Portfolio</h1>
-        <ul>
-            <li class="litem">Social</li>
-            <li class="litem">Services</li>
-            <li class="litem">Coworkers</li>
+        <nav class="navbar ns">
+        <h1 class="workbench-font main-title left">Checco's Portfolio</h1>
+        <ul class="pl right">
+            <li class="litem center">Social</li>
+            <li class="litem left">Services</li>
+            <li class="litem center">Coworkers</li>
         </ul>
         </nav>
         
-        <div class="space-between">
-        <h2 class="margin-bottom-none">What is the purpose of this site?</h2>
-        <h2 class="margin-bottom-none">Why did you choose this minimalist style for your portfolio?</h2>
-        <h2 class="margin-bottom-none">What is my first project?</h2>  
+        <div class="qg">
+        <h2 class="center">What is the purpose of this site?</h2>
+        <h2 class="center">Why did you choose this minimalist style for your portfolio?</h2>
+        <h2 class="center">What is my first project?</h2>
+        <p class="center">Here you can find the story of my projects, showing how I have improved up to today.</p>
+        <p class="center">I love minimalist and futuristic styles.</p>
+        <p class="center">My portfolio is my very first personal project, built to showcase my skills.</p>  
         </div>
-
-        <div class="space-between">
-        <p>Here you can find the story of my projects, showing how I have improved up to today.</p>
-        <p>I love minimalist and futuristic styles.</p>
-        <p>My portfolio is my very first personal project, built to showcase my skills.</p>  
-        </div>
-        
-    </body>
 
 </html>
