--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,10 @@
     <head>
         <title>Checco's Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="keywords" content="portfolio, Checco, html, css, projects">
+        <meta name="description" content="Checco's Portfolio used to showcase his projects">
+        <meta name="author" content="Checco">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
@@ -25,6 +29,10 @@
         <p class="center">Here you can find the story of my projects, showing how I have improved up to today.</p>
         <p class="center">I love minimalist and futuristic styles.</p>
         <p class="center">My portfolio is my very first personal project, built to showcase my skills.</p>  
+        </div>
+        <h1 class="center">My first project</h1>
+        <div class="g">
+            <iframe class="center" width="33%" src="https://checcool.github.io/portfolio/" title="First project of Checco that is his portfolio"></iframe>
         </div>
 
 </html>
