refactor: cleaned and reorganized code using AI

--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@
         <nav class="navbar ns">
         <h1 class="workbench-font main-title left">Checco's Portfolio</h1>
         <ul class="pl right">
+            <li class="litem right">IT</li>
             <li class="litem center">Social</li>
             <li class="litem left">Services</li>
             <li class="litem center">Coworkers</li>
@@ -23,16 +24,16 @@
         </nav>
         
         <div class="qg">
-        <h2 class="center">What is the purpose of this site?</h2>
-        <h2 class="center">Why did you choose this minimalist style for your portfolio?</h2>
-        <h2 class="center">What is my first project?</h2>
-        <p class="center">Here you can find the story of my projects, showing how I have improved up to today.</p>
-        <p class="center">I love minimalist and futuristic styles.</p>
-        <p class="center">My portfolio is my very first personal project, built to showcase my skills.</p>  
+        <h2 class="center comic-relief-regular">What is the purpose of this site?</h2>
+        <h2 class="center comic-relief-regular">Why did you choose this <br> minimalist style for your portfolio?</h2>
+        <h2 class="center comic-relief-regular">What is my first project?</h2>
+        <p class="center nm">Here you can find the story of my projects, showing how I have improved up to today.</p>
+        <p class="center nm">I love minimalist and futuristic styles.</p>
+        <p class="center nm">My portfolio is my very first personal project, built to showcase my skills.</p>  
         </div>
-        <h1 class="center">My first project</h1>
+        <h1 class="center comic-relief-regular">My first project</h1>
         <div class="g">
-            <iframe class="center" width="33%" src="https://checcool.github.io/portfolio/" title="First project of Checco that is his portfolio"></iframe>
+            <iframe style="border-radius: 10px; border-color: black;" class="center" width="33%" src="https://checcool.github.io/portfolio/" title="First project of Checco that is his portfolio"></iframe>
         </div>
 
 </html>
